[gd_scene load_steps=21 format=3 uid="uid://c051w6upl0t16"]

[ext_resource type="PackedScene" uid="uid://bydyult2k5rcb" path="res://addons/kenney_prototype_tools/scenes/green/green_01.tscn" id="1_61jfr"]
[ext_resource type="Script" path="res://camera-effects/camera-effects-scene.gd" id="1_ct3xk"]
[ext_resource type="PackedScene" uid="uid://bjupt5nu14hth" path="res://addons/kenney_prototype_tools/scenes/dark/dark_05.tscn" id="2_xlmfj"]
[ext_resource type="PackedScene" uid="uid://bhuxup1cbugbw" path="res://addons/kenney_prototype_tools/scenes/orange/orange_06.tscn" id="3_xj16f"]
[ext_resource type="PackedScene" uid="uid://ct0k1os3fx251" path="res://addons/kenney_prototype_tools/scenes/purple/purple_03.tscn" id="4_paly4"]
[ext_resource type="PackedScene" uid="uid://d23c4qtufdpk7" path="res://addons/kenney_prototype_tools/scenes/red/red_02.tscn" id="5_dra7r"]
[ext_resource type="PackedScene" uid="uid://npssehgc2462" path="res://addons/kenney_prototype_tools/scenes/light/light_06.tscn" id="6_y7myb"]
[ext_resource type="PackedScene" uid="uid://sy04esp2kle1" path="res://camera-effects/chromatic_aberration.tscn" id="7_uoado"]
[ext_resource type="PackedScene" uid="uid://djsrvtsqjesw8" path="res://camera-effects/pixelate.tscn" id="8_fshcg"]
[ext_resource type="PackedScene" uid="uid://ds5xw2us1br3q" path="res://camera-effects/vignette.tscn" id="9_q1phu"]
[ext_resource type="PackedScene" uid="uid://dv3o1u4hc11vn" path="res://camera-effects/sepia.tscn" id="10_rqewe"]
[ext_resource type="PackedScene" uid="uid://cf1adbox8xy7e" path="res://camera-effects/grain_noise.tscn" id="11_3qobw"]
[ext_resource type="PackedScene" uid="uid://dwppksddt4t0x" path="res://camera-effects/hexagon_mosaic.tscn" id="12_uvrob"]
[ext_resource type="Texture2D" uid="uid://etnwfy334jt" path="res://addons/kenney_particle_pack/window_03.png" id="14_ydbvf"]

[sub_resource type="Environment" id="Environment_tln01"]
glow_blend_mode = 4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u8hyj"]
albedo_color = Color(0.337255, 0.890196, 0.207843, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_wx71g"]
material = SubResource("StandardMaterial3D_u8hyj")
size = Vector2(20, 20)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_24bae"]
bg_color = Color(0.278431, 0, 0.141176, 0.392157)

[sub_resource type="Animation" id="Animation_7utnq"]
resource_name = "camera_rotation"
length = 24.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera Rotator:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 24),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(3.48787e-16, 6.28319, 3.48787e-16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_do3k3"]
_data = {
"camera_rotation": SubResource("Animation_7utnq")
}

[node name="Camera Effects Scene" type="Node3D"]
script = ExtResource("1_ct3xk")

[node name="Camera Rotator" type="Node3D" parent="."]
transform = Transform3D(0.983115, -3.94809e-16, -0.182989, 3.38571e-16, 1, -3.38571e-16, 0.182989, 2.709e-16, 0.983115, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="Camera Rotator"]
transform = Transform3D(0.707107, -0.40558, 0.579228, 0, 0.819152, 0.573577, -0.707107, -0.40558, 0.579228, 29.8522, 29.8536, 29.8522)
environment = SubResource("Environment_tln01")
projection = 1
current = true
fov = 13.5
size = 13.34

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 2, 0)
light_energy = 2.0

[node name="Scene" type="Node3D" parent="."]

[node name="Ground" type="MeshInstance3D" parent="Scene"]
mesh = SubResource("PlaneMesh_wx71g")
skeleton = NodePath("../..")

[node name="Cube" parent="Scene" instance=ExtResource("1_61jfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 5)

[node name="Cube2" parent="Scene" instance=ExtResource("1_61jfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 5)

[node name="Cube3" parent="Scene" instance=ExtResource("1_61jfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 5)

[node name="Cube4" parent="Scene" instance=ExtResource("1_61jfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 5)

[node name="Cube5" parent="Scene" instance=ExtResource("1_61jfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, 5)

[node name="Cube6" parent="Scene" instance=ExtResource("2_xlmfj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 4)

[node name="Cube7" parent="Scene" instance=ExtResource("2_xlmfj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, 4)

[node name="Cube12" parent="Scene" instance=ExtResource("2_xlmfj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 4)

[node name="Cube13" parent="Scene" instance=ExtResource("2_xlmfj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 4)

[node name="Cube14" parent="Scene" instance=ExtResource("2_xlmfj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 4)

[node name="Cube8" parent="Scene" instance=ExtResource("3_xj16f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 6)

[node name="Cube9" parent="Scene" instance=ExtResource("3_xj16f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 6)

[node name="Cube10" parent="Scene" instance=ExtResource("3_xj16f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 6)

[node name="Cube11" parent="Scene" instance=ExtResource("4_paly4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 7)

[node name="Cube15" parent="Scene" instance=ExtResource("5_dra7r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, 3)

[node name="Cube16" parent="Scene" instance=ExtResource("5_dra7r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 3)

[node name="Cube17" parent="Scene" instance=ExtResource("5_dra7r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 3)

[node name="Cube18" parent="Scene" instance=ExtResource("6_y7myb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 2)

[node name="Cube19" parent="Scene" instance=ExtResource("1_61jfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -5)

[node name="Cube20" parent="Scene" instance=ExtResource("1_61jfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, -5)

[node name="Cube21" parent="Scene" instance=ExtResource("1_61jfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -5)

[node name="Cube22" parent="Scene" instance=ExtResource("1_61jfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -5)

[node name="Cube23" parent="Scene" instance=ExtResource("1_61jfr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -5)

[node name="Cube24" parent="Scene" instance=ExtResource("2_xlmfj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -6)

[node name="Cube25" parent="Scene" instance=ExtResource("2_xlmfj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -6)

[node name="Cube26" parent="Scene" instance=ExtResource("2_xlmfj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -6)

[node name="Cube27" parent="Scene" instance=ExtResource("2_xlmfj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -6)

[node name="Cube28" parent="Scene" instance=ExtResource("2_xlmfj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, -6)

[node name="Cube29" parent="Scene" instance=ExtResource("3_xj16f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -4)

[node name="Cube30" parent="Scene" instance=ExtResource("3_xj16f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -4)

[node name="Cube31" parent="Scene" instance=ExtResource("3_xj16f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, -4)

[node name="Cube32" parent="Scene" instance=ExtResource("4_paly4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -3)

[node name="Cube33" parent="Scene" instance=ExtResource("5_dra7r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -7)

[node name="Cube34" parent="Scene" instance=ExtResource("5_dra7r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -7)

[node name="Cube35" parent="Scene" instance=ExtResource("5_dra7r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -7)

[node name="Cube36" parent="Scene" instance=ExtResource("6_y7myb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -8)

[node name="CanvasLayer Effects" type="CanvasLayer" parent="."]

[node name="Chromatic Aberration" parent="CanvasLayer Effects" instance=ExtResource("7_uoado")]
visible = false

[node name="Pixelate" parent="CanvasLayer Effects" instance=ExtResource("8_fshcg")]
visible = false

[node name="Vignette" parent="CanvasLayer Effects" instance=ExtResource("9_q1phu")]
visible = false

[node name="Sepia" parent="CanvasLayer Effects" instance=ExtResource("10_rqewe")]
visible = false

[node name="Grain Noise" parent="CanvasLayer Effects" instance=ExtResource("11_3qobw")]
visible = false

[node name="Hexagon Mosaic" parent="CanvasLayer Effects" instance=ExtResource("12_uvrob")]

[node name="CanvasLayer UI" type="CanvasLayer" parent="."]

[node name="SideBar" type="HBoxContainer" parent="CanvasLayer UI"]
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="SideBar Menu" type="MarginContainer" parent="CanvasLayer UI/SideBar"]
layout_mode = 2

[node name="Panel" type="Panel" parent="CanvasLayer UI/SideBar/SideBar Menu"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_24bae")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer UI/SideBar/SideBar Menu"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer UI/SideBar/SideBar Menu/MarginContainer"]
layout_mode = 2

[node name="Button Disable Effects" type="Button" parent="CanvasLayer UI/SideBar/SideBar Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Disable Effects"

[node name="ButtonRotatingCamera" type="CheckButton" parent="CanvasLayer UI/SideBar/SideBar Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
button_pressed = true
text = "Rotating Camera"

[node name="ButtonChromaticAberration" type="CheckButton" parent="CanvasLayer UI/SideBar/SideBar Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Chromatic Aberration"

[node name="ButtonPixelate" type="CheckButton" parent="CanvasLayer UI/SideBar/SideBar Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Pixelate"

[node name="ButtonVignette" type="CheckButton" parent="CanvasLayer UI/SideBar/SideBar Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Vignette"

[node name="ButtonSepia" type="CheckButton" parent="CanvasLayer UI/SideBar/SideBar Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Sepia"

[node name="ButtonGrainNoise" type="CheckButton" parent="CanvasLayer UI/SideBar/SideBar Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Grain Noise"

[node name="ButtonHexagonMosaic" type="CheckButton" parent="CanvasLayer UI/SideBar/SideBar Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
button_pressed = true
text = "Hexagon Mosaic"

[node name="ToggleButton" type="TextureButton" parent="CanvasLayer UI/SideBar"]
custom_minimum_size = Vector2(64, 2.08165e-12)
layout_mode = 2
texture_normal = ExtResource("14_ydbvf")
ignore_texture_size = true
stretch_mode = 4

[node name="BottomBar" type="MarginContainer" parent="CanvasLayer UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme_override_constants/margin_bottom = 10

[node name="LabelVisibleEffects" type="RichTextLabel" parent="CanvasLayer UI/BottomBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]Hexagon Mosaic"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_do3k3")
}

[connection signal="pressed" from="CanvasLayer UI/SideBar/SideBar Menu/MarginContainer/VBoxContainer/Button Disable Effects" to="." method="disableAllEffects"]
[connection signal="pressed" from="CanvasLayer UI/SideBar/SideBar Menu/MarginContainer/VBoxContainer/ButtonRotatingCamera" to="." method="toggleCameraRotating"]
[connection signal="toggled" from="CanvasLayer UI/SideBar/SideBar Menu/MarginContainer/VBoxContainer/ButtonChromaticAberration" to="." method="updateVisibleEffects"]
[connection signal="toggled" from="CanvasLayer UI/SideBar/SideBar Menu/MarginContainer/VBoxContainer/ButtonPixelate" to="." method="updateVisibleEffects"]
[connection signal="toggled" from="CanvasLayer UI/SideBar/SideBar Menu/MarginContainer/VBoxContainer/ButtonVignette" to="." method="updateVisibleEffects"]
[connection signal="toggled" from="CanvasLayer UI/SideBar/SideBar Menu/MarginContainer/VBoxContainer/ButtonSepia" to="." method="updateVisibleEffects"]
[connection signal="toggled" from="CanvasLayer UI/SideBar/SideBar Menu/MarginContainer/VBoxContainer/ButtonGrainNoise" to="." method="updateVisibleEffects"]
[connection signal="toggled" from="CanvasLayer UI/SideBar/SideBar Menu/MarginContainer/VBoxContainer/ButtonHexagonMosaic" to="." method="updateVisibleEffects"]
[connection signal="pressed" from="CanvasLayer UI/SideBar/ToggleButton" to="." method="toggleSideBar"]
